AC_PREREQ([2.69])
AC_INIT([rtems-c-src-lib-libbsp-arm-stm32f7],[_RTEMS_VERSION],[https://devel.rtems.org/newticket])

RTEMS_TOP(../../../../../..)
RTEMS_SOURCE_TOP
RTEMS_BUILD_TOP
RTEMS_BSP_LINKCMDS

RTEMS_CANONICAL_TARGET_CPU
AM_INIT_AUTOMAKE([no-define nostdinc foreign 1.12.2])
RTEMS_BSP_CONFIGURE

RTEMS_BSPOPTS_SET([STM32F7_FAMILY_F10XXX],[stm32f1*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_FAMILY_F10XXX],[Chip belongs to the STM32F10XXX family.])

RTEMS_BSPOPTS_SET([STM32F7_FAMILY_F7XXXX],[stm32f7*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_FAMILY_F7XXXX],[Chip belongs to the STM32F7XXXX family.])

RTEMS_BSPOPTS_SET([STM32F7_HSE_OSCILLATOR],[*],[8000000])
RTEMS_BSPOPTS_HELP([STM32F7_HSE_OSCILLATOR],[HSE oscillator frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_SYSCLK],[stm32f7*],[8000000])
RTEMS_BSPOPTS_SET([STM32F7_SYSCLK],[*],[16000000])
RTEMS_BSPOPTS_HELP([STM32F7_SYSCLK],[SYSCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_HCLK],[stm32f7*],[8000000])
RTEMS_BSPOPTS_SET([STM32F7_HCLK],[*],[16000000])
RTEMS_BSPOPTS_HELP([STM32F7_HCLK],[HCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_PCLK1],[stm32f7*],[8000000])
RTEMS_BSPOPTS_SET([STM32F7_PCLK1],[*],[16000000])
RTEMS_BSPOPTS_HELP([STM32F7_PCLK1],[PCLK1 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_PCLK2],[stm32f7*],[8000000])
RTEMS_BSPOPTS_SET([STM32F7_PCLK2],[*],[16000000])
RTEMS_BSPOPTS_HELP([STM32F7_PCLK2],[PCLK2 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_USART_BAUD],[*],[115200])
RTEMS_BSPOPTS_HELP([STM32F7_USART_BAUD],[baud for USARTs])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_1],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_1],[enable USART 1])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_2],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_2],[enable USART 2])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_3],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_3],[enable USART 3])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_UART_4],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_UART_4],[enable UART 4])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_UART_5],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_UART_5],[enable UART 5])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_6],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_6],[enable USART 6])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_I2C1],[stm32f1*],[])
RTEMS_BSPOPTS_SET([STM32F7_ENABLE_I2C1],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_I2C1],[enable I2C 1])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_I2C2],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_I2C2],[enable I2C 2])

RTEMS_BSP_CLEANUP_OPTIONS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
